# keep-talkin

./: .gitignore  Cargo.toml
benches/: tokenizer_bench.rs
src/: bindings.rs  lib.rs  loader.rs  loaders.rs  splitters.rs
tests/: bench.rs  common.rs  compatibility.rs  correctness.rs  py_bench.py
tests/corpus/: lorem_large.txt
tests/corpus1/: emoji.txt  lorem_large.txt
