[package]
name = "keep-talkin"
version = "0.1.0"
edition = "2024"
authors = ["Jason Wiemels <jwiemels@usc.edu>"]

[dependencies]
pcre2 = { version = "0.2", optional = true }
regex = "1.11"
aho-corasick = "1.1"
priority-queue = "2.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.6"
tokenizers = "0.21"
hf-hub = "0.4"

[features]
default = [ "pcre2", "jit-regex" ]
jit-regex = [ "pcre2" ]

[[bench]]
name = "tokenizer_bench"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
overflow-checks = false
opt-level = 3
debug = false
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false
