[package]
name = "keep-talkin"
version = "0.1.0"
edition = "2021"
authors = ["Jason Wiemels <jwiemels@usc.edu>"]
autobenches = false
autotests = false

[lib]
name = "keep_talkin"
crate-type = ["cdylib", "rlib"]

[dependencies]
pcre2 = "0.2"
aho-corasick = "1.1"
rustc-hash = "2.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1.0"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.6"
tokenizers = "0.21"
hf-hub = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
overflow-checks = false
opt-level = 3
debug = false
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[[bench]]
name = "bench"
path = "tests/bench.rs"
harness = false

[[test]]
name = "correctness"
path = "tests/correctness.rs"

[[test]]
name = "debug_merge"
path = "tests/debug_merge.rs"
